# inkjet

./: .earthlyignore  .fpm  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Earthfile  LICENSE  README.md  build.rs  devbox.json  inkjet.md  lefthook.yml  man-filter.lua  maskfile.md  only.md  test.tsx
.github/: CODEOWNERS
.github/workflows/: ci.yaml  ci.yml  release.yml
.lefthook/pre-commit/: earthly-lint.sh
completions/: inkjet.bash  inkjet.fish
packager/: Earthfile
src/: command.rs  executor.rs  lib.rs  loader.rs  main.rs  parser.rs  runner.rs  utils.rs  view.rs
tests/: arguments_and_flags_test.rs  duplicated-alias.test.md  env_vars_test.rs  imported.md  imported.tsx  inkjet.md  integration_test.rs  interactive_test.rs  merged-example.md  nothing.inkjet.md  subcommands_test.rs  supported_runtimes_test.rs
tests/common/: mod.rs
tests/interactive/: inkjet.md
tests/interpretter/: interpret.md
tests/merge/: inkjet.md
tests/merge/second/: second.inkjet.md
tests/required/: inkjet.md
tests/runtime-mocks/: all
tests/simple_case/: inkjet.md  test_interact
