[package]
name = "inkjet"
version = "0.13.0"
description = "Make your markdown executable with inkjet, the interactive CLI task runner"
authors = ["Brandon Kalinowski <brandon@brandonkalinowski.com>"]
repository = "https://github.com/brandonkal/inkjet"
readme = "README.md"
keywords = ["cli", "task", "command", "make", "markdown"]
categories = ["command-line-interface", "command-line-utilities", "development-tools::build-utils", "parser-implementations"]
edition = "2018"
exclude = ["inkjet.md", ".gitignore", "CHANGELOG.md", "test/**", ".circleci/**"]
license = "MIT"

[lib]
name = "inkjet"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
colored = "2.0.0" # https://github.com/mackwic/colored
pulldown-cmark = { version = "0.7.2", default-features = false } # https://github.com/raphlinus/pulldown-cmark
dialoguer = { git = "https://github.com/brandonkal/dialoguer" }
mdcat = "= 0.16.0"

[dependencies.clap] # https://github.com/clap-rs/clap
version = "2.33.1"
features = ["wrap_help"]

[dependencies.syntect]
version = "4.2.0"
default-features = false
features = ["parsing", "assets", "dump-load"]

[dev-dependencies]
assert_cmd = "1.0.1" # https://github.com/assert-rs/assert_cmd
assert_fs = "1.0.0"  # https://github.com/assert-rs/assert_fs
predicates = "1.0.5"  # https://github.com/assert-rs/predicates-rs
rexpect = "0.4.0"
