[package]
name = "inkjet"
version = "0.15.0"
description = "Create interactive CLIs and execute Markdown with Inkjet"
authors = ["Brandon Kalinowski <brandon@brandonkalinowski.com>"]
repository = "https://github.com/brandonkal/inkjet"
readme = "README.md"
keywords = ["cli", "task", "command", "make", "markdown"]
categories = ["command-line-interface", "command-line-utilities", "development-tools::build-utils", "parser-implementations"]
edition = "2018"
exclude = ["inkjet.md", ".gitignore", "CHANGELOG.md", "test/**", ".github/**", ".devbox"]
license = "MIT"
build = "build.rs"

[package.metadata.tauri-winres]
OriginalFilename = "inkjet.exe"
LegalCopyright = "Copyright © 2024 Brandon Kalinowski"

[lib]
name = "inkjet"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[profile.coverage]
inherits = "release"
opt-level = 0
debug = true
lto = false

[dependencies]
colored = "2.0.0" # https://github.com/mackwic/colored
pulldown-cmark = { version = "0.7.2", default-features = false } # https://github.com/raphlinus/pulldown-cmark
dialoguer = { git = "https://github.com/brandonkal/dialoguer" }
mdcat = { version = "0.16.0", default-features = false }
regex = "1.10.6"
walkdir = "2"

[dependencies.clap] # https://github.com/clap-rs/clap
version = "2.33.1"
features = ["wrap_help"]

[dependencies.syntect]
version = "4.2.0"
default-features = false
features = ["parsing", "assets", "dump-load"]

[dev-dependencies]
assert_cmd = "2.0.16" # https://github.com/assert-rs/assert_cmd
assert_fs = "1.0.0"  # https://github.com/assert-rs/assert_fs
predicates = "3.1.2"  # https://github.com/assert-rs/predicates-rs

[target.'cfg(not(windows))'.dev-dependencies]
rexpect = "0.5.0"

[target.'cfg(windows)'.build-dependencies]
tauri-winres = "0.1"
