[package]
name = "inkjet"
version = "1.1.0"
description = "Create interactive CLIs and execute Markdown with Inkjet"
authors = ["Brandon Kalinowski <brandon@brandonkalinowski.com>"]
repository = "https://github.com/brandonkal/inkjet"
readme = "README.md"
keywords = ["cli", "task", "command", "make", "markdown"]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "development-tools::build-utils",
    "parser-implementations",
]
edition = "2024"
exclude = [
    "inkjet.md",
    ".gitignore",
    "CHANGELOG.md",
    "test/**",
    ".github/**",
    ".devbox",
]
license = "MIT"
build = "build.rs"

[package.metadata.tauri-winres]
OriginalFilename = "inkjet.exe"
LegalCopyright = "© 2024 Brandon Kalinowski"

[lib]
name = "inkjet"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.coverage]
inherits = "release"
opt-level = 0
debug = true
lto = false

[dependencies]
pulldown-cmark = { version = "0.12.2", default-features = false }      # https://github.com/raphlinus/pulldown-cmark
dialoguer = { git = "https://github.com/brandonkal/dialoguer" }
regex = "1.10.6"
walkdir = "2"
pulldown-cmark-mdcat = { version = "2.7.1", default-features = false }
url = "2.5.4"
clap = { version = "4.5", features = ["string"] }
clap_complete = "4.5"
color-print = "0.3.7"

[dependencies.syntect]
version = "5.2.0"
default-features = false
features = ["default-syntaxes"]

[dev-dependencies]
assert_cmd = "2.0.16" # https://github.com/assert-rs/assert_cmd
assert_fs = "1.0.0"   # https://github.com/assert-rs/assert_fs
predicates = "3.1.2"  # https://github.com/assert-rs/predicates-rs
rexpect = "0.6.2"

[target.'cfg(not(windows))'.dev-dependencies]
rexpect = "0.6.2"

[target.'cfg(windows)'.build-dependencies]
tauri-winres = "0.3.1"

[build-dependencies]
tauri-winres = "0.3.1"
